2010-02-10  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_GUI.m: the windows for MSD and GSER plots are now equally spaced for the loglog representation.

2010-09-30  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: 
		- MIPs as 'tif' files are supported.  
		- added support for selecting individual msd paths.  Doesn't function yet, but doesn't screw anything else up either.
		- added the ability to 'neutralize offsets' in [x y] vs. t plot.
		- changed default windowsize vector
		- updated calls to 'msd' and 've' to utilize new data handling methods 'winedge' and 'nmin'
	* evt_gui.fig: same.
	
2009-10-06  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: added new filter interface for Ricky's new code.
	* evt_gui.fig: same.

2009-08-13  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.m: changed default window sizes to a set of values used more often in the lab vis a vis Ricky.

2009-05-22  Ricky Spero <rspero@physics.unc.edu>
	* evt_gui.m: added bead IDs to individual MSD series on MSD plot. Can be seen by opening plot tools.

2009-05-04  Jeremy Cribb <jcribb@email.unc.edu>
	* evt_gui.fig: added linear mean drift subtraction.
	* evt_gui.m: same.

2008-11-19  Kris Ford <krisford@email.unc.edu>
	* evt_GUI.m: modified documentation to better match Mathworks convention

2008-11-03  Jeremy Cribb <jcribb@email.unc.edu>
- evt_gui.fig: added pruning widgets for removing auto-tracker false-positives (identified by trackers that move less than minDistance OR less than some minimum number of tracking points).
- evt_gui.m: same.
- TODO.txt: added notes.

2008-02-27  Jeremy Cribb <jcribb@email.unc.edu>
	- evt_gui.m: fixed bug where frames per second was misreported.
	- evt_gui.fig: same.
	- TODO.txt: updated.
	
2008-02-26  Jeremy Cribb <jcribb@email.unc.edu>
	- evt_gui.m: fixed slider bug when deleting 1 of remaining 2 tracks.

2008-02-26  Jeremy Cribb <jcribb@email.unc.edu>
	- evt_gui.m: removed unused plot types.
	- evt_gui.fig: same.
